[package]
name = "foretell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
dirs = "4.0.0"
fmutex = "0.1.0"
notify-rust = "4.5.8"
reqwest = { version = "0.11.11", features = ["blocking"] }
scryfall = "0.11.0"
tempfile = "3.3.0"
