[package]
name = "foretell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
dirs = "4.0.0"
fmutex = "0.1.0"
futures-util = "0.3.26"
notify-rust = "4.5.8"
reqwest = { version = "0.11.11", features = ["blocking"] }
scryfall = "0.12.2"
tempfile = "3.3.0"
tokio = { features = ["rt", "process", "io-util", "fs", "macros", "sync", "parking_lot"], version = "1.25.0" }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
